@startuml

title __OOP_KURS_3-1's Class Diagram__\n

  namespace app {
    class app.Main {
    }
  }
  

  namespace app {
    namespace entity {
      class app.entity.Linear {
      }
    }
  }
  

  namespace app {
    namespace entity {
      class app.entity.Series {
      }
    }
  }
  

  namespace app {
    namespace entity {
      abstract class app.entity.Solution {
      }
    }
  }
  

  namespace app {
    namespace entity {
      class app.entity.Square {
      }
    }
  }
  

  app.entity.Linear -up-|> app.entity.Solution
  app.entity.Square -up-|> app.entity.Solution


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
